[package]
name = "padmap"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty-xinput = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
    "Win32_Media",
]